--- a/demographicModelSelectionExample.ipynb
+++ b/demographicModelSelectionExample.ipynb
@@ -154,7 +154,7 @@
     "X3 = np.loadtxt(\"growth.msOut.stats\",usecols=(3,9))\n",
     "X = np.concatenate((X1,X2,X3))\n",
     "\n",
-    "#created associated 'labels' -- these will be the targets for training\n",
+    "#create associated 'labels' -- these will be the targets for training\n",
     "y = [0]*len(X1) + [1]*len(X2) + [2]*len(X3)\n",
     "Y = np.array(y)\n"
    ]
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's it! The classifier is trained. This Random Forest classifer used 100 trees in its ensemble, a pretty large number considering that we are only using two summary stats to represent our data. Nevertheless it trains on the data very, very quickly.  \n",
+    "That's it! The classifier is trained. This Random Forest classifer used 100 decision trees in its ensemble, a pretty large number considering that we are only using two summary stats to represent our data. Nevertheless it trains on the data very, very quickly.  \n",
     "\n",
     "# Step 3: benchmark our classifier\n",
     "The last step of the process is to use our trained classifier to predict which demographic models our test data are drawn from. Recall that the classifier hasn't seen these test data so this should be a fair test of how well the classifier will perform on any new data we throw at it in the future. We will visualize performance using a confusion matrix. "
@@ -247,7 +247,7 @@
     "    ax.axis('tight')\n",
     "    ax.set_title(title)\n",
     "\n",
-    "    #lebels\n",
+    "    #labels\n",
     "    ax.set_xticklabels(predictedClassOrderLs, minor=False, fontsize=9, rotation=45)\n",
     "    ax.set_yticklabels(reversed(trueClassOrderLs), minor=False, fontsize=9)\n",
     "    ax.set_xlabel(\"Predicted class\")\n",
@@ -298,7 +298,7 @@
     "X2 = np.loadtxt(\"contraction.msOut.stats\",usecols=(1,3,5,7,9))\n",
     "X3 = np.loadtxt(\"growth.msOut.stats\",usecols=(1,3,5,7,9))\n",
     "X = np.concatenate((X1,X2,X3))\n",
-    "#created associated 'labels' -- these will be the targets for training\n",
+    "#create associated 'labels' -- these will be the targets for training\n",
     "y = [0]*len(X1) + [1]*len(X2) + [2]*len(X3)\n",
     "Y = np.array(y)\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X,Y,test_size=0.1)\n",
@@ -320,7 +320,7 @@
    "source": [
     "Even better!\n",
     "\n",
-    "Hopefully this simple example gives you the gist of how supervised ML can be used. In the future we will populate this github repository with further examples that might be illustrative. "
+    "Hopefully this simple example gives you the gist of how supervised ML can be used. In the future we will populate this GitHub repository with further examples that might be illustrative. "
    ]
   },
   {
