added an SVM example on sweep detection, plus some minor cleanup

--- a/demographicModelSelectionExample.ipynb
+++ b/demographicModelSelectionExample.ipynb
@@ -181,7 +181,6 @@
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.preprocessing import normalize\n",
     "\n",
     "rfClf = RandomForestClassifier(n_estimators=100,n_jobs=10)\n",
     "clf = rfClf.fit(X_train, Y_train)\n"
@@ -217,7 +216,9 @@
     }
    ],
    "source": [
-    "#These two functions (taken from scikit-learn.org) plots the decision boundaries for a classifier.\n",
+    "from sklearn.preprocessing import normalize\n",
+    "\n",
+    "#These two functions (taken from scikit-learn.org) plot the decision boundaries for a classifier.\n",
     "def plot_contours(ax, clf, xx, yy, **params):\n",
     "    Z = clf.predict(np.c_[xx.ravel(), yy.ravel()])\n",
     "    Z = Z.reshape(xx.shape)\n",
@@ -237,6 +238,7 @@
     "X0, X1 = X[:, 0], X[:, 1]\n",
     "xx, yy = make_meshgrid(X0, X1, h=0.2)\n",
     "plot_contours(ax, clf, xx, yy, cmap=plt.cm.coolwarm, alpha=0.8)\n",
+    "# plotting only a subset of our data to keep things from getting too cluttered\n",
     "ax.scatter(X_test[:200, 0], X_test[:200, 1], c=Y_test[:200], cmap=plt.cm.coolwarm, edgecolors='k')\n",
     "ax.set_xlabel(r\"$\\theta_{w}$\", fontsize=14)\n",
     "ax.set_ylabel(r\"Fay and Wu's $H$\", fontsize=14)\n",
