--- a/demographicModelSelectionExample.ipynb
+++ b/demographicModelSelectionExample.ipynb
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "!conda install scikit-learn"
+    "!conda install scikit-learn --yes"
    ]
   },
   {
