a few changes to text

--- a/ancPopSizeRegressionExample.ipynb
+++ b/ancPopSizeRegressionExample.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -92,12 +92,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "conda install -c conda-forge scikit-allel"
+    "!conda install -c conda-forge scikit-allel --yes"
    ]
   },
   {
@@ -128,8 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,13 +164,15 @@
    "source": [
     "Now we have to read in our simulation output and convert it into a data structure used by `scikit-allel` called a HaplotypeArray. The script msTools.py which we have included in this repository does this for us. Then we can calculate our statistics for each replicate.\n",
     "\n",
-    "(One weird trick: we have to map our polymorphisms from a contiuous space to discrete space in order to use `scikit-allel`. The code below does that but we have to specify a number of sites we are mapping too, whuch must be greater than the number of polymorphisms. 10000 sites will be plenty here.)"
+    "(One weird trick: we have to map our polymorphisms from a contiuous space to discrete space in order to use `scikit-allel`. The code below does that but we have to specify a number of sites we are mapping too, which must be greater than the number of polymorphisms. The 10000 sites we specified for `ms`'s recombination routine should suffice.)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from msTools import *\n",
