--- a/ancPopSizeRegressionExample.ipynb
+++ b/ancPopSizeRegressionExample.ipynb
@@ -179,14 +179,14 @@
    "source": [
     "from msTools import *\n",
     "import numpy as np\n",
-    "import allel\n",
+    "import sys, allel\n",
     "\n",
     "totalPhysLen=10000\n",
     "hapArraysIn, positionArrays = msOutToHaplotypeArrayIn(\"random_pop_size.msOut\", totalPhysLen)\n",
     "X = []\n",
     "for i in range(len(hapArraysIn)):\n",
     "    if i % 1000 == 0:\n",
-    "        print \"done with %d instances\\n\" %(i)\n",
+    "        sys.stdout.write(\"done with %d instances\\n\" %(i))\n",
     "    #some of the statistics that we are going to calculate here require a HaplotypeArray as input, made thusly\n",
     "    haps = allel.HaplotypeArray(hapArraysIn[i], dtype='i1')\n",
     "    \n",
@@ -205,7 +205,7 @@
     "    \n",
     "    X.append(currVec)\n",
     "\n",
-    "print \"\"\n",
+    "sys.stdout.write(\"\"\n"),
     "X = np.array(X)\n",
     "\n",
     "#reading in our target output\n",
