--- a/ancPopSizeRegressionExample.ipynb
+++ b/ancPopSizeRegressionExample.ipynb
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "!conda install scikit-learn"
+    "!conda install scikit-learn --yes"
    ]
   },
   {
@@ -115,7 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "pip install scikit-allel"
+    "!pip install scikit-allel"
    ]
   },
   {
@@ -158,7 +158,7 @@
    },
    "outputs": [],
    "source": [
-    "#simulate under the equilibrium model -- could also do this with ms\n",
+    "#simulate under the various two epoch models where ancient population size is determined at random from list made above\n",
     "!./ms 20 10000 -t 100 -r 100 10000 -en 0.5 1 tbs  < random_pop_size.sizes > random_pop_size.msOut"
    ]
   },
@@ -174,7 +174,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from msTools import *\n",
@@ -244,7 +246,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -305,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not too shabby! Let's look at some quantitative measures of this fit. In particular we will look at the mean square error (lower is better) and the variance explained by the regression (a.k.a. R^2 -- 1 would be perfect)"
+    "Not too shabby! Let's look at some quantitative measures of this fit. In particular we will look at the mean squared error (lower is better) and the variance explained by the regression (a.k.a. R^2 -- 1 would be perfect)"
    ]
   },
   {
@@ -323,7 +327,7 @@
     }
    ],
    "source": [
-    "print 'mean square error = ',np.mean((preds-Y_test)**2)\n",
+    "print 'mean squared error = ',np.mean((preds-Y_test)**2)\n",
     "print 'R^2 = ', clf.score(X_test, Y_test)"
    ]
   },
